--- a/Views/Book/Booking.cshtml
+++ b/Views/Book/Booking.cshtml
@@ -19,29 +19,29 @@
                 <div>
                     <div class="btn-group mb-4" role="group" aria-label="Basic radio toggle button group">
                         <input type="radio" id="btnradio1"  class="btn-check" asp-for="time" value="11:00:00"
-                            autocomplete="off" />
+                            autocomplete="off" required/>
                         <label class="btn btn-outline-primary" for="btnradio1"> 11h-12h</label>
 
                         <input type="radio" id="btnradio2" class="btn-check" asp-for="time" value="12:00:00"
-                            autocomplete="off" />
+                            autocomplete="off" required/>
                         <label class="btn btn-outline-primary" for="btnradio2">12h-13h</label>
 
                         <input type="radio" id="btnradio3" class="btn-check" asp-for="time" value="13:00:00"
-                            autocomplete="off" />
+                            autocomplete="off" required/>
                         <label class="btn btn-outline-primary" for="btnradio3">13h-14h</label>
                     </div>
 
                     <div class="btn-group mb-4" role="group" aria-label="Basic radio toggle button group">
                         <input type="radio" id="btnradio4" class="btn-check" asp-for="time" value="18:00:00"
-                            autocomplete="off" />
+                            autocomplete="off" required/>
                         <label class="btn btn-outline-primary" for="btnradio4"> 18h-19h</label>
 
                         <input type="radio" id="btnradio5"class="btn-check" asp-for="time" value="19:00:00"
-                            autocomplete="off" />
+                            autocomplete="off" required/>
                         <label class="btn btn-outline-primary" for="btnradio5">19h-20h</label>
 
                         <input type="radio" id="btnradio6" class="btn-check" asp-for="time" value="20:00:00"
-                            autocomplete="off" />
+                            autocomplete="off" required/>
                         <label class="btn btn-outline-primary" for="btnradio6">20h-21h</label>
 
                     </div>
