--- a/Views/Shared/Footer/_Footer-review.cshtml
+++ b/Views/Shared/Footer/_Footer-review.cshtml
@@ -5,54 +5,61 @@
         });
     });
 </script>
+    <div class="row d-flex justify-content-center">
 @if (ViewData["Reviews"] != null)
 {
-    <div id="carouselReviews" class="carousel slide" data-bs-ride="carousel">
-        <div class="Review-Carousel carousel-inner">
-            @foreach (var review in ViewData["Reviews"] as List<ReviewModel>)
-            {
-                var firstReview = (ViewData["Reviews"] as List<ReviewModel>)[0];
+    
+        <div id="carouselReviews" class="carousel slide" data-bs-ride="carousel">
+            <div class="Review-Carousel carousel-inner">
+                @foreach (var review in ViewData["Reviews"] as List<ReviewModel>)
+                {
+                    var firstReview = (ViewData["Reviews"] as List<ReviewModel>)[0];
 
-                <div class="carousel-item  @(review.Equals(firstReview) ? "active" : "")">
-                    <div class="review">
-                        <div class="user-container">
-                            <span class="user-info">@review.Title</span><br>
-                            <span class="user-name">@review.Name</span>
-                        </div>
-                        <div class="rating">
-                            <span>
-                                @{
-                                    var yellowStars = review.Rating;
-                                    var greyStars = 5 - yellowStars;
-                                }
-                                @for (var j = 0; j < yellowStars; j++)
-                                {
-                                    <span class="fa fa-star checked">&#9733;</span>
-                                }
-                                @for (var j = 0; j < greyStars; j++)
-                                {
-                                    <span class="fa fa-star">&#9733;</span>
-                                }
-                            </span>
-                        </div>
-                        <div class="review-text">
-                            <span class="review-text">@review.Description</span>
+                    <div class="carousel-item  @(review.Equals(firstReview) ? "active" : "")">
+                        <div class="review">
+                            <div class="user-container">
+                                <span class="user-info">@review.Title</span><br>
+                                <span class="user-name">@review.Name</span>
+                            </div>
+                            <div class="rating">
+                                <span>
+                                    @{
+                                        var yellowStars = review.Rating;
+                                        var greyStars = 5 - yellowStars;
+                                    }
+                                    @for (var j = 0; j < yellowStars; j++)
+                                    {
+                                        <span class="fa fa-star checked">&#9733;</span>
+                                    }
+                                    @for (var j = 0; j < greyStars; j++)
+                                    {
+                                        <span class="fa fa-star">&#9733;</span>
+                                    }
+                                </span>
+                            </div>
+                            <div class="review-text">
+                                <span class="review-text">@review.Description</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
+                }
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselReviews" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselReviews" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselReviews" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselReviews" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+              
+    
 }
 else
 {
     <h1>Il n'y a pas de commentaires.</h1>
 }
+        <button class="btn btn-dark mt-2 w-50" onclick="@("window.location.href='" + @Url.Action("Review", "Review") + "'");">Donnez son avis</button>
+        
+    </div>
