--- a/Views/Review/Review.cshtml
+++ b/Views/Review/Review.cshtml
@@ -114,6 +114,6 @@
         </div>
     </div>
     <div class="col-12 col-md-6 d-flex justify-content-center ">
-        <img class="" src="https://picsum.photos/id/237/650/620" alt="">
+        <img class="img-fluid" src="https://picsum.photos/id/237/650/620" alt="">
     </div>
 </div>
